Clean TestGcSwap_opt