@@ -7,5 +7,8 @@ then
 fi
 
 JBIN_DIR=~/jdk_1.8_source/openjdk-8u40-src-b25-10_feb_2015/openjdk/build/linux-x86_64-normal-server-slowdebug/jdk/bin/
+echo $JBIN_DIR
 
-sudo $JBIN_DIR/java -Xmx60g -XX:ParallelGCThreads=1 -XX:ConcGCThreads=1 $1 
+echo "[HJLEE] START WORKLOAD..."
+sudo $JBIN_DIR/java -Xmx61g -XX:-PrintGCDetails $1 
+echo "[HJLEE] COMPLETE"
